k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-sqlite-app
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1           # Allow one extra pod during update
      maxUnavailable: 1     # At most one pod unavailable at a time
  selector:
    matchLabels:
      app: fastapi-sqlite-app
  template:
    metadata:
      labels:
        app: fastapi-sqlite-app
    spec:
      containers:
        - name: fastapi
          image: prakhardockerhub/fastapi-sqlite-app:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: sqlite-storage
              mountPath: /data
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
