k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-sqlite-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-sqlite-app
  template:
    metadata:
      labels:
        app: fastapi-sqlite-app
    spec:
      containers:
        - name: fastapi-container
          image: prakhardockerhub/fastapi-sqlite-app:latest
          ports:
            - containerPort: 8000
